--- a/styles/globals.css
+++ b/styles/globals.css
@@ -191,3 +191,7 @@ code[class*='language-'] {
   flex: 0 0 calc(115% + (var(--slide-spacing) * 2));
   object-fit: cover;
 }
+
+.pac-container {
+  z-index: 2000 !important;
+}
